--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "gulp-htmlclean": "^2.7.22",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^6.1.1",
-    "gulp-uglify-es": "^2.0.0"
+    "gulp-terser": "^1.2.0"
   }
 }
