--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,7 +36,6 @@ jobs:
         echo "Personal site of han1475, managed by emacs, org mode, git, ox-hugo, and travis." >> README.md
         git add .
         git commit -m 'upate blog'
-        git push -u origin master -f
       env:
         GIT_USER: han1475
         GIT_EMAIL: me@han1475.com
@@ -44,3 +43,7 @@ jobs:
         REPO: github.com/han1475/han1475.github.io.git
         BUILD_DIR: container
         HUGO_VERSION: 0.59.1
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
