--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v1
       with:
         ref: source 
-    - name: setup hugo
+    - name: build and push
       run: |
         echo 'Downloading hugo'
         mkdir work
@@ -26,16 +26,19 @@ jobs:
         echo 'Cloning the GitHub Pages repo'
         git config --global user.name ${GIT_USER}
         git config --global user.email ${GIT_EMAIL}
-        rm -rf "${BUILD_DIR}"
         git clone https://${GH_TOKEN}@${REPO} "${BUILD_DIR}"
+        rm -rf "${BUILD_DIR}"
         
         echo 'Moving the content over'
         cp -r public/* "${BUILD_DIR}"
         cd "${BUILD_DIR}"
         echo "han1475.com" >> CNAME
         echo "Personal site of han1475, managed by emacs, org mode, git, ox-hugo, and travis." >> README.md
+        
+        echo 'Committing the site to git and pushing'
         git add .
         git commit -m 'upate blog'
+        git push origin master -f
       env:
         GIT_USER: han1475
         GIT_EMAIL: me@han1475.com
@@ -43,7 +46,3 @@ jobs:
         REPO: github.com/han1475/han1475.github.io.git
         BUILD_DIR: container
         HUGO_VERSION: 0.59.1
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
