--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v1
       with:
         ref: source 
-    - name: build and push
+    - name: build
       run: |
         echo 'Downloading hugo'
         mkdir work
