--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,7 +27,7 @@ jobs:
         git config --global user.name ${GIT_USER}
         git config --global user.email ${GIT_EMAIL}
         rm -rf "${BUILD_DIR}"
-        git clone https://${GH_TOKEN}@${REPO} "${BUILD_DIR}"
+        git clone -b master https://${GH_TOKEN}@${REPO} "${BUILD_DIR}"
 
         
         echo 'Moving the content over'
@@ -39,6 +39,7 @@ jobs:
         echo 'Committing the site to git and pushing'
         git add .
         git commit -m 'upate blog'
+        git push origin -f
       env:
         GIT_USER: han1475
         GIT_EMAIL: me@han1475.com
@@ -46,7 +47,3 @@ jobs:
         REPO: github.com/han1475/han1475.github.io.git
         BUILD_DIR: container
         HUGO_VERSION: 0.59.1
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.ACCESS_TOKEN }}
