--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,11 +33,14 @@ jobs:
         echo 'Moving the content over'
         cp -r public/* "${BUILD_DIR}"
         cd "${BUILD_DIR}"
-        
-        echo 'Committing the site to git and pushing'
-        git add .
-        git commit -m 'upate blog'
-        git push origin -f
+        if git diff --exit-code; then
+          echo "There is nothing to commit, so aborting"
+        else
+          echo 'Committing the site to git and pushing'
+          git add .
+          git commit -m 'upate blog'
+          git push origin -f
+        fi
       env:
         GIT_USER: han1475
         GIT_EMAIL: me@han1475.com
