--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/jane"]
-	path = themes/jane
-	url = https://github.com/xianmin/hugo-theme-jane.git
+[submodule "themes/cupcake"]
+	path = themes/cupcake
+	url = https://github.com/han1475/cupcake
