--- a/config.toml
+++ b/config.toml
@@ -1,122 +1,23 @@
-# This is a simple configuration.
-# If you want to see the full configuration, please check `full-config.toml` .
-# And see https://gohugo.io/getting-started/configuration/ .
-
 baseURL = "https://han1475.com/"
+languageCode = "en-us"
 title = "小蜗牛的大梦想"
-enableRobotsTXT = true
-enableEmoji = true
-theme = "jane"
-# 生成目录 publishDir = "public"
+theme = "cupcake"
 
-hasCJKLanguage = true     # has chinese/japanese/korean ? # 自动检测是否包含 中文\日文\韩文
-paginate = 10              # Number of articles displayed on the homepage  # 首页每页显示的文章数
-rssLimit = 20             # Limit Entry Count to Rss file # 限制 Rss 文章输出数量
-disqusShortname = ""      # disqus_shortname
-googleAnalytics = ""      # UA-XXXXXXXX-X
-copyright = ""            # default: author.name ↓        # 默认为下面配置的author.name ↓
-
-# Highlight options. See https://gohugo.io/content-management/syntax-highlighting/
-pygmentsCodeFences = true # Enable syntax highlighting with GitHub flavoured code fences
-pygmentsUseClasses = true # Use CSS classes to format highlighted code
-pygmentsCodefencesGuessSyntax = true
-pygmentsOptions = "linenos=table"
-
-# language support # en / zh-cn / other... translations present in i18n/
-defaultContentLanguage = "zh-cn"           # Default language to use
-[languages.zh-cn]
-  languageCode = "zh-cn"
-
-[author]                  # essential                     # 必需
-  name = "han1475"
-
-[sitemap]                 # essential                     # 必需
-  changefreq = "weekly"
-  priority = 0.5
-  filename = "sitemap.xml"
-
-[[menu.main]]             # config your menu              # 配置目录
-  name = "主页"
-  weight = 10
-  identifier = "home"
-  url = "/"
-[[menu.main]]
-  name = "归档"
-  weight = 20
-  identifier = "archives"
-  url = "/post/"
-[[menu.main]]
-  name = "标签"
-  weight = 30
-  identifier = "tags"
-  url = "/tags/"
-[[menu.main]]
-  name = "分类"
-  weight = 40
-  identifier = "categories"
-  url = "/categories/"
-[[menu.main]]
-  name = "关于"
-  weight = 50
-  identifier = "about"
-  url = "/about/"
-[[menu.main]]
-  name = "订阅"
-  weight = 60
-  identifier = "feed"
-  url = "/index.xml"
+# Highlight options.
+# @See https://gohugo.io/content-management/syntax-highlighting/
+PygmentsCodeFences = true # Enable syntax highlighting with GitHub flavoured code fences
+PygmentsUseClasses = true # Use CSS classes to format highlighted code
+PygmentsCodefencesGuessSyntax = true
+PygmentsOptions = "linenos=table"
 
 [params]
-  since = "2017"            # Site creation time          # 站点建立时间
-  homeFullContent = false   # if false, show post summaries on home page. Othewise show full content.
-  rssFullContent = true     # if false, Rss feed instead of the summary
+  # The date format to use; for a list of valid formats
+  # @see https://gohugo.io/functions/format/
+  dateFormatToUse = "2006年1月2号"
 
-  # site info (optional)                                  # 站点信息（可选，不需要的可以直接注释掉）
-  logoTitle = "小蜗牛的大梦想"        # default: the title value    # 默认值: 上面设置的title值
-  keywords = ["linux","emacs","program","han1475","博客"]
-  description = "这是我的个人博客"
+  # site motto
+  motto = '多说无益，放"码"过来'
 
-  # paginate of archives, tags and categories             # 归档、标签、分类每页显示的文章数目
-  archive-paginate = 1000
-
-  # The date format to use; for a list of valid formats, see https://gohugo.io/functions/format/
-  dateFormatToUse = "2006-01-02"
-
-  # show word count and read time ?                       # 是否显示字数统计与阅读时间
-  moreMeta = true
-
-  # 一些全局开关，你也可以在每一篇内容的 front matter 中针对单篇内容关闭或开启某些功能，在 archetypes/default.md 查看更多信息。
-  # Some global options, you can also close or open something in front matter for a single post, see more information from `archetypes/default.md`.
-  toc = true                                                                            # 是否开启目录
-  photoswipe = true         # see https://github.com/dimsemenov/PhotoSwipe            # 是否启用PhotoSwipe（图片可点击）
-  contentCopyright = '<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">知识共享署名-非商业性使用-相同方式共享 4.0 国际许可协议</a>'
-
-  # Link custom CSS and JS assets
-  #   (relative to /static/css and /static/js respectively)
-  customCSS = []            # if ['custom.css'], load '/static/css/custom.css' file
-  customJS = []             # if ['custom.js'], load '/static/js/custom.js' file
-
-  [params.search.google]    # google custom search, see https://cse.google.com
-    enable = true
-    id = "000156910018797923656:e0czhfw1qsn"
-    title = "站内搜索"
-
-  [params.social]                                         # 社交链接
+[params.social]
     a-email = "mailto:me@han1475.com"
-    #b-stack-overflow = "http://192.168.1.15"
-    #c-twitter = "http://192.168.1.15"
-    #d-facebook = "http://192.168.1.15"
-    #e-linkedin = "http://192.168.1.15"
-    #f-google = "http://192.168.1.15"
     g-github = "https://github.com/han1475"
-    #h-weibo = "http://192.168.1.15"
-    #i-zhihu = "http://192.168.1.15"
-    #j-douban = "http://192.168.1.15"
-    #k-pocket = "http://192.168.1.15"
-    #l-tumblr = "http://192.168.1.15"
-    #m-instagram = "http://192.168.1.15"
-    #n-gitlab = "http://192.168.1.15"
-    #o-goodreads = "http://192.168.1.15"
-    #p-coding = "http://192.168.1.15"
-    #q-bilibili = "http://192.168.1.15"
-    #r-codeforces = "http://192.168.1.15"
