--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,14 +26,14 @@ jobs:
         hugo -v 
         
         echo 'Cloning the GitHub Pages repo'
-        rm -rf "${BUILD_DIR}"
-        git clone -b master https://${GH_TOKEN}@${REPO} "${BUILD_DIR}"
+        rm -rf ${BUILD_DIR}
+        git clone -b master https://${GH_TOKEN}@${REPO} ${BUILD_DIR}
 
         
         echo 'Moving the content over'
-        rm -rf "${BUILD_DIR}/*"
-        cp -r public/* "${BUILD_DIR}"
-        cd "${BUILD_DIR}"
+        rm -rf ${BUILD_DIR}/*
+        cp -r public/* ${BUILD_DIR}
+        cd ${BUILD_DIR}
         if git diff --exit-code; then
           echo "There is nothing to commit, so aborting"
         else
